# Robotics-and-XR-project

./: README.md
exercises_ws/src/path_planner_example/: package.xml  setup.py
exercises_ws/src/path_planner_example/path_planner_example/: path_planner_node.py
ros2_ws/src/andino_custom/: package.xml  setup.cfg  setup.py
ros2_ws/src/andino_custom/config/: nav2_params.yaml
ros2_ws/src/andino_custom/launch/: andino_gz.launch.py
ros2_ws/src/project/: package.xml  setup.py
ros2_ws/src/project/project/: project_node.py
