<?xml version="1.0"?>
<package format="3">
  <name>andino_custom</name>
  <version>0.0.1</version>
  <description>Custom Andino launch files and config for Nav2</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <!-- This is a Python package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>andino_gz</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
